Add resume download prompt to index.html
Added a line to prompt users to download the resume.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
 
   <header>
   <h1>Srinivasa Reddy</h1>
-  <p>Full Stack Developer | Web Developer | Odoo Learner</p>
+  <p>Full Stack Developer | Web Developer | Odoo Learner</p><br>
+    <p>You can Download my Resume Here</p><br>
 
   <a href="Resume/THUMMA_SRINIVASA_REDDY_RESUME.pdf" class="resume-btn" download>
     <i class="fas fa-download"></i> Download Resume
