--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <header>
   <h1>Srinivasa Reddy</h1>
   <p>Full Stack Developer | Web Developer | Odoo Learner</p><br>
-    <p>You can Download my Resume Here</p><br>
+    <p>You can Download my Resume Here</p>
 
   <a href="Resume/THUMMA_SRINIVASA_REDDY_RESUME.pdf" class="resume-btn" download>
     <i class="fas fa-download"></i> Download Resume
