Update resume links and add new project section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <header>
   <h1>Srinivasa Reddy</h1>
   <p>Full Stack Developer | Web Developer | Odoo Learner</p><br>
-    <p>You can Download my Resume Here</p>
+    <p>You can Find My Resume Here</p>
 
   <a href="Resume/THUMMA_SRINIVASA_REDDY_RESUME.pdf" class="resume-btn" download>
     <i class="fas fa-download"></i> Download Resume
@@ -226,7 +226,7 @@
     batch tracking, and expiry date handling.
   </p>
 
-  <a class="project-link" href="https://github.com/srinivasa16/pharmacy-management" target="_blank">
+  <a class="project-link" href="https://github.com/srinivasa16/Pharmacy_Store" target="_blank">
     <i class="fab fa-github"></i> View on GitHub
   </a>
 </div>
@@ -244,7 +244,7 @@
     to showcase skills and projects.
   </p>
 
-  <a class="project-link" href="https://github.com/srinivasa16/srinivasa-portfolio" target="_blank">
+  <a class="project-link" href="https://github.com/srinivasa16/My_Portfolio" target="_blank">
     <i class="fab fa-github"></i> View on GitHub
   </a>
 </div>
@@ -262,7 +262,7 @@
     and Machine Learning for real-time signal optimization.
   </p>
 
-  <a class="project-link" href="https://github.com/srinivasa16/ai-traffic-control" target="_blank">
+  <a class="project-link" href="https://github.com/srinivasa16/Smart_Control_Of_Traffic_Light" target="_blank">
     <i class="fab fa-github"></i> View on GitHub
   </a>
 </div>
@@ -276,6 +276,18 @@
   </div>
 </section> -->
 
+<div class="project">
+  <h3>Face Attendance System</h3>
+  <p>
+    AI-based face recognition system for attendance tracking using Python, OpenCV,
+    Numpy, Pandas, CSV, Pickle, Machine Learning for accurate identification and logging.
+  </p>
+
+  <a class="project-link" href="https://github.com/srinivasa16/Face_Attendance_Project" target="_blank">
+    <i class="fab fa-github"></i> View on GitHub
+  </a>
+</div>
+    
 <section class="contact">
   <h2>Contact</h2>
   <div class="contact-links">
