Add new AI traffic light project and update footer
Added new project 'Smart Control Of Traffic Light Using AI' with details and GitHub link. Updated footer to reflect design credit.

--- a/index.html
+++ b/index.html
@@ -220,7 +220,27 @@
   <h2>Projects</h2>
   <div class="projects">
     <div class="project">
-  <h3>Pharmacy Management System</h3>
+  <h3>Smart Control Of Traffic Light Using AI</h3>
+  <p>
+    AI-based traffic management system using Python, OpenCV,
+    and Machine Learning for real-time signal optimization.
+  </p>
+
+  <a class="project-link" href="https://github.com/srinivasa16/Smart_Control_Of_Traffic_Light" target="_blank">
+    <i class="fab fa-github"></i> View on GitHub
+  </a>
+</div>
+    <!-- <div class="project">
+      <h3>Smart Control Of Traffic Light Using AI</h3>
+      <p>
+        AI-based traffic management system using Python, OpenCV, and
+        Machine Learning to dynamically control traffic signals.
+      </p>
+    </div>
+  </div>
+</section> -->
+    <div class="project">
+  <h3>Pharmacy Management System Using Odoo</h3>
   <p>
     Custom Odoo module for pharmacy billing, inventory management,
     batch tracking, and expiry date handling.
@@ -231,12 +251,25 @@
   </a>
 </div>
     <!-- <div class="project">
-      <h3>Pharmacy Management System</h3>
+      <h3>Pharmacy Management System Using Odoo</h3>
       <p>
         Custom Odoo module for pharmacy billing, inventory management,
         batch tracking, and expiry date handling.
       </p>
     </div> -->
+    
+<div class="project">
+  <h3>Face Attendance System Using Python</h3>
+  <p>
+    AI-based face recognition system for attendance tracking using Python, OpenCV,
+    Numpy, Pandas, CSV, Pickle, Machine Learning for accurate identification and logging.
+  </p>
+
+  <a class="project-link" href="https://github.com/srinivasa16/Face_Attendance_Project" target="_blank">
+    <i class="fab fa-github"></i> View on GitHub
+  </a>
+</div>
+    <!--My_Portfolio-->
     <div class="project">
   <h3>Personal Portfolio Website</h3>
   <p>
@@ -255,39 +288,6 @@
         HTML and CSS to showcase skills and projects.
       </p>
     </div> -->
-    <div class="project">
-  <h3>Smart Traffic Light Control Using AI</h3>
-  <p>
-    AI-based traffic management system using Python, OpenCV,
-    and Machine Learning for real-time signal optimization.
-  </p>
-
-  <a class="project-link" href="https://github.com/srinivasa16/Smart_Control_Of_Traffic_Light" target="_blank">
-    <i class="fab fa-github"></i> View on GitHub
-  </a>
-</div>
-    <!-- <div class="project">
-      <h3>Smart Traffic Light Control Using AI</h3>
-      <p>
-        AI-based traffic management system using Python, OpenCV, and
-        Machine Learning to dynamically control traffic signals.
-      </p>
-    </div>
-  </div>
-</section> -->
-
-<div class="project">
-  <h3>Face Attendance System</h3>
-  <p>
-    AI-based face recognition system for attendance tracking using Python, OpenCV,
-    Numpy, Pandas, CSV, Pickle, Machine Learning for accurate identification and logging.
-  </p>
-
-  <a class="project-link" href="https://github.com/srinivasa16/Face_Attendance_Project" target="_blank">
-    <i class="fab fa-github"></i> View on GitHub
-  </a>
-</div>
-    
 <section class="contact">
   <h2>Contact</h2>
   <div class="contact-links">
@@ -304,7 +304,8 @@
 </section>
 
 <footer>
-  © 2026 Srinivasa Reddy · All Rights Reserved
+  ©Designed & Developed by @Srinivasa Reddy<br>
+  · All Rights Reserved
 </footer>
 
 </body>
